<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, ButtonTestActivity!</string>
    <string name="app_name">GeoLogistic client</string>
    <string name="title_activity_register">register activity</string>
    <string name="title_activity_main">Geologistic client</string>
    <string name="gcm_registered">Urządzenie zarejestrowane</string>
    <string name="gcm_unregistered">Urządzenie niezarejestrowane</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered.</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="gcm_new_order">Nowe zlecenie</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    <string name="main_title">Klient mobilny aplikacji GeoLogistic</string>
    <string name="Log_into">Zaloguj się</string>
    <string name="Register">Rejestracja</string>
    <string name="register_fname">Imię:</string>
    <string name="register_lname">Nazwisko:</string>
    <string name="register_login">Login:</string>
    <string name="register_email">E-mail:</string>
    <string name="register_phone">Numer telefonu:</string>
    <string name="register_button">Zarejestruj konto</string>
    <string name="title_activity_list_of_orders">ListOfOrdersActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="ordersList_title">Lista zleceń</string>
    <string name="title_activity_confirm_order">Potwierdzenie zlecenia</string>
    <string name="confirm_order_title">Nowe zlecenie</string>
    <string name="confirm_order_place">Miejsce:</string>
    <string name="confirm_order_time">Godzina:</string>
    <string name="confirm_order_customer">Klient:</string>
    <string name="confirm_order_goal_place">Miejsce docelowe:</string>
    <string name="confirm_order_type">Typ zlecenia:</string>
    <string name="confirm_order_ok">Akceptuj</string>
    <string name="confirm_order_reject">Odrzuć</string>
    <string name="title_activity_taksometer">TaksometerActivity</string>
    <string name="taksometr_order_label">Zlecenie</string>
    <string name="taksometr_phone">Tel.</string>
    <string name="taksometr_distance">dystans:</string>
    <string name="taksometr_change_status">Zmień status</string>
    <string name="taksometr_status">Status</string>
    <string name="taksometr_adddress_label">adres:</string>
    <string name="taksometr_order_time">czas:</string>
    <string name="taksometr_customer_label">dane klienta:</string>
    <string name="img">img</string>

</resources>