<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background5" >

    <TextView
        android:id="@+id/textViewOrderName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/main_title"
        android:textColor="#ffffff"
        android:textSize="@dimen/textDim_labels_bigger" />

    <EditText
        android:id="@+id/editTextLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:gravity="center"
        android:hint="login" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/buttonLogin"
        style="@style/lightboxButton.Grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        android:paddingTop="10dp"
        android:text="@string/Log_into"
        android:textSize="24dp" />

    <Button
        android:id="@+id/buttonRegister"
        style="@style/lightboxButton.Grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/btn_paddingBottom"
        android:layout_marginTop="20dp"
        android:text="@string/Register"
        android:textSize="@dimen/textDim_labels_bigger" />

    <TextView
        android:id="@+id/lblMessage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:textColor="#000000"
        android:textSize="16dip" />

</LinearLayout>