<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background4"
    android:fadingEdge="vertical"
    android:fadingEdgeLength="@dimen/textDim_big"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbarAlwaysDrawVerticalTrack="false"
    tools:context=".ConfirmOrderActivity" xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewOrderTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_order_title"
                android:textColor="#FAA"
                android:textSize="@dimen/textDim_labels_bigger" />

            <TextView
                android:id="@+id/textViewOrderId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="@color/btn_grey_light" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewOrderName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="nazwa"
                android:textColor="#AFA" />

            <TextView
                android:id="@+id/textViewOrderType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:text="TextView"
                android:textColor="@color/btn_grey_light"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/btn_blue_dark"
        android:fadingEdge="vertical"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/TextViewOrderPlace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_order_place"
            android:textColor="#AAA" />

        <TextView
            android:id="@+id/TextViewOrderPlaceValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/order_tier2"
            android:text="place"
            android:textColor="#FFF"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/order_tier1_top"
        android:background="@color/btn_blue_dark"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/TextViewOrderTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_order_time"
            android:textColor="#AAA" />

        <TextView
            android:id="@+id/TextViewOrderTimeValue"
            android:layout_width="232dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/order_tier2"
            android:text="place"
            android:textColor="#FFF"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/order_tier1_top"
        android:background="@color/btn_grey_dark"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/TextViewOrderCustomer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_order_customer"
            android:textColor="#AAA" />

        <TextView
            android:id="@+id/TextViewOrderCustomerValue"
            android:layout_width="232dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/order_tier2"
            android:text="place"
            android:textColor="#FFF"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/order_tier1_top"
        android:layout_marginTop="@dimen/order_tier1_top"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/TextViewOrderGoal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_order_goal_place"
            android:textColor="#AAA" />

        <TextView
            android:id="@+id/TextViewOrderGoalValue"
            android:layout_width="232dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/order_tier2"
            android:text="place"
            android:textColor="#FFF"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/order_tier1_top" >

        <Button
            android:id="@+id/buttonOrderConfirm"
            style="@style/lightboxButton.Green"
            android:layout_width="138dp"
            android:layout_height="wrap_content"
            android:text="@string/confirm_order_ok" />

        <Button
            android:id="@+id/buttonOrderReject"
            style="@style/lightboxButton.Red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_weight="0.36"
            android:text="@string/confirm_order_reject" />
    </LinearLayout>

</LinearLayout>