<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView1"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="#000"
    tools:context=".TaksometerActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#123456" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/taksometr_order_label"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewTxmetrOrderId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/taksometr_order_label"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewTxmetrOrderName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/taksometr_order_label"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:text="@string/taksometr_adddress_label"
                    android:textColor="@color/btn_blue_light"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textViewTxmetrOrderAddressFrom"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textColor="#FFFFEE"
                    android:text=""
                    android:textSize="26sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:text="@string/taksometr_order_time"
                    android:textColor="@color/btn_blue_light"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textViewTxmetrTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textColor="#AAAAAA"
                    android:text=""
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp" >

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="@string/taksometr_customer_label"
                android:textColor="@color/btn_blue_light"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/TextViewTxmetrCustomerData1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text=""
                    android:textColor="#AAAAAA"
                    android:textSize="19sp" />

                <TextView
                    android:id="@+id/TextViewTxmetrCustomerData2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text=""
                    android:textColor="#AAAAAA"
                    android:textSize="19sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical"
            android:paddingBottom="10dp" >

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:text="@string/taksometr_status"
                android:textColor="@color/btn_blue_light"
                android:textSize="12sp" />

            <Spinner
                android:id="@+id/spinner1"
                style="@style/lightboxButton.Blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginLeft="10dp"
                android:paddingLeft="80dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="#534B4F"
            android:fadingEdge="vertical|horizontal"
            android:fadingEdgeLength="5dp"
            android:orientation="vertical"
            android:padding="5dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/TextView06"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:text="@string/taksometr_order_time"
                    android:textColor="@color/btn_blue_light"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/TextViewTxmetrOrderTimer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text=""
                    android:textColor="#AAAAAA"
                    android:textSize="17sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/TextView03"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:text="@string/taksometr_distance"
                    android:textColor="@color/btn_blue_light"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/TextViewtxmetrOrderDistance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text=""
                    android:textColor="#AAAAAA"
                    android:textSize="17sp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</ScrollView>